fix: Improve comment clarity

--- a/.github/workflows/dependabot-auto-approve.yml
+++ b/.github/workflows/dependabot-auto-approve.yml
@@ -1,4 +1,4 @@
-name: Auto-approve dependabot PRs
+name: Auto-approve and auto-merge dependabot PRs
 
 on:
   schedule:
@@ -12,13 +12,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Fetch all PRs
-        # Auto approve PRs that are 20 days old, for security
+        # Auto approve PRs that are over 20 days old, for security
         run: |
           gh search prs org:openactive --state=open --author "app/dependabot" --json url,createdAt --label "dependencies" --state open --review required --limit 100 --jq '.[] | select((.createdAt | fromdateiso8601) < (now - (20*24*60*60))) | .url' | tee prs.txt
         env:
           GH_TOKEN: ${{ secrets.PUBLIC_REPO_ACCESS_TOKEN }}
 
-      - name: Approve PRs
+      - name: Approve and enable auto-merge for PRs
         run: |
           while IFS= read -r pr
           do
