--- a/.github/workflows/dependabot-auto-approve.yml
+++ b/.github/workflows/dependabot-auto-approve.yml
@@ -2,7 +2,7 @@ name: Auto-approve and auto-merge dependabot PRs
 
 on:
   schedule:
-    - cron: '*/5 * * * *' # Runs every 5 minutes
+    - cron: '0 9 * * 2-4' # Runs at 9 AM UTC (GMT) every Tuesday, Wednesday, and Thursday
 
 permissions:
   pull-requests: write
@@ -14,7 +14,7 @@ jobs:
       - name: Fetch all PRs
         # Auto approve PRs that are over 20 days old, for security
         run: |
-          gh search prs org:openactive --state=open --author "app/dependabot" --json url,createdAt --label "dependencies" --state open --review required --limit 100 --jq '.[] | select((.createdAt | fromdateiso8601) < (now - (1))) | .url' | tee prs.txt
+          gh search prs org:openactive --state=open --author "app/dependabot" --json url,createdAt --label "dependencies" --state open --review required --limit 100 --jq '.[] | select((.createdAt | fromdateiso8601) < (now - (20*24*60*60))) | .url' | tee prs.txt
         env:
           GH_TOKEN: ${{ secrets.PUBLIC_REPO_ACCESS_TOKEN }}
 
