--- a/.github/workflows/dependabot-auto-approve.yml
+++ b/.github/workflows/dependabot-auto-approve.yml
@@ -2,7 +2,7 @@ name: Auto-approve and auto-merge dependabot PRs
 
 on:
   schedule:
-    - cron: '0 9 * * 2-4' # Runs at 9 AM UTC (GMT) every Tuesday, Wednesday, and Thursday
+    - cron: '0 21 * * 1-3' # Runs at 9 PM UTC (GMT) every Monday, Tuesday, and Wednesday (so as not to use CI capacity during the working day)
 
 permissions:
   pull-requests: write
